added more projects to profile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
     <!--Header element-->
     <header>
-        <h1>Andrew <span>Quenette</span></h1>
+        <div id="header-details">
+            <h1>Andrew <span>Quenette</span></h1>
+            <p>E-Mail: <span> and1roxx43@gmail.com</span></p>
+            <p>Phone: <span>0417355571</span></p>
+            <p class="linkedin">LinkedIn: &nbsp<span><a href="https://www.linkedin.com/in/andrew-quenette-6a3a245a/" target="_blank"><i style="font-size:24px" class="fa">&#xf08c;</i></a></span></p>
+        </div>
+        
+
 
         <!-- Burger menu on Nav bar -->
         <section>
@@ -23,6 +30,7 @@
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#myWork">My Work</a></li>
+                <li><a href="#portfolio-container">Portfolio</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
@@ -55,32 +63,40 @@
          <!-- Link to portfolio section -->
         <article id="myWork">
             <section class="my-work">
-                <h2>My Work</h2> 
+                <h2>My Github Repository</h2> 
             </section>
             <section class="box-container">
                 <section class="box box1">
                     <h3>Excursion</h3>
-                    <button class="btn project1"><a href="#portfolio-container">View me</a></button>
+                    <button class="btn project1"><a href="https://github.com/and1roxx43/excursion" target="_blank">View me</a></button>
                 </section>
                 <section class="box box2">
                     <h3>CSS Snippets</h3>
-                    <button class="btn project2"><a href="#portfolio-container">View me</a></button>
+                    <button class="btn project2"><a href="https://github.com/and1roxx43/Css-Snippets" target="_blank">View me</a></button>
                 </section>
                 <section class="box box3">
-                    <h3>Horiseon Marketing</h3>
-                    <button class="btn project3"><a href="#portfolio-container">View me</a></button>
+                    <h3>Password Generator</h3>
+                    <button class="btn project3"><a href="https://github.com/and1roxx43/Password_Generator" target="_blank">View me</a></button>
                 </section>
-                <section class="box box3">
+                <section class="box box4">
+                    <h3>Rock Scissors Paper</h3>
+                    <button class="btn project4"><a href="https://github.com/and1roxx43/rock-scissors-paper" target="_blank">View me</a></button>
+                </section>
+                <section class="box box5">
+                    <h3>Quiz Game</h3>
+                    <button class="btn project4"><a href="https://github.com/and1roxx43/Quiz-Game" target="_blank">View me</a></button>
+                </section>
+                <section class="box box6">
                     <h3>Weather Forecast</h3>
-                    <button class="btn project4"><a href="#portfolio-container">View me</a></button>
+                    <button class="btn project5"><a href="https://github.com/and1roxx43/Weather-App" target="_blank">View me</a></button>
                 </section>
-                <section class="box box3">
+                <section class="box box7">
                     <h3>Work Day Scheduler</h3>
-                    <button class="btn project5"><a href="#portfolio-container">View me</a></button>
+                    <button class="btn project6"><a href="https://github.com/and1roxx43/day-scheduler" target="_blank">View me</a></button>
                 </section>
-                <section class="box box3">
+                <section class="box box8">
                     <h3>Food Recipe Portal</h3>
-                    <button class="btn project6"><a href="#portfolio-container">View me</a></button>
+                    <button class="btn project7"><a href="https://github.com/and1roxx43/Andyz-Food-Recipe-pocket" target="_blank">View me</a></button>
                 </section>
             </section>
         </article>
@@ -126,12 +142,29 @@
                     <figcaption>CSS Snippet Cheatsheet</figcaption>
                 </a>
             </section>
-            <section class="portfolio">     
-                <a href="https://and1roxx43.github.io/HoriseonMarketing/" target="_blank">
-                    <img class="proj" src="./assets/images/Horiseon_Marketing.png" alt="Horiseon marketing">
-                    <figcaption>Horiseon Marketing</figcaption>
+
+            <section class="portfolio"> 
+                <a href="https://and1roxx43.github.io/Password_Generator/" target="_blank">
+                    <img class="proj" src="./assets/images/password-generator.png" 
+                    alt="Password Generator">
+                    <figcaption>Password Generator</figcaption>
                 </a>
             </section>
+
+            <section class="portfolio">     
+                <a href="https://and1roxx43.github.io/rock-scissors-paper/" target="_blank">
+                    <img class="proj" src="./assets/images/Rock_Scissors_Paper.png" alt="Rock Scissors Paper">
+                    <figcaption>Rock_Scissors_Paper</figcaption>
+                </a>
+            </section>
+
+            <section class="portfolio">     
+                <a href="https://and1roxx43.github.io/Quiz-Game/" target="_blank">
+                    <img class="proj" src="./assets/images/quiz-game.png" alt="Quiz Game">
+                    <figcaption>Quiz Game</figcaption>
+                </a>
+            </section>
+
             <section class="portfolio">     
                 <a href="https://and1roxx43.github.io/Weather-App/" target="_blank">
                     <img class="proj" src="./assets/images/Weather_Forecast.png" alt="Weather forecast">
