--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                     <h3>Food Recipe Portal</h3>
                     <button class="btn project7"><a href="https://github.com/and1roxx43/Andyz-Food-Recipe-pocket" target="_blank">View me</a></button>
                 </section>
+                <section class="box box8">
+                    <h3>Etrade Portal</h3>
+                    <button class="btn project7"><a href="https://github.com/and1roxx43/eTrade-Project2" target="_blank">View me</a></button>
+                </section>
             </section>
         </article>
         <!-- End of my work section -->
@@ -179,6 +183,12 @@
                 <a href="https://and1roxx43.github.io/Andyz-Food-Recipe-pocket/" target="_blank">
                     <img class="proj" src="./assets/images/Pocket_Recipe_Portal.png" alt="Food Recipe Portal">
                     <figcaption>Food Recipe Portal</figcaption>
+                </a>
+            </section>
+            <section class="portfolio">     
+                <a href="https://etrade-project2.herokuapp.com/eTrade" target="_blank">
+                    <img class="proj" src="./assets/images/eTrade.png" alt="eTrade online portal">
+                    <figcaption>eTrade Online Portal</figcaption>
                 </a>
             </section>
             </div>
