--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                     <li>JavaScript</li>
                     <li>Ruby</li>
                     <li>T-SQL</li>
+                    <li>MySQL</li>
+                    <li>Node.js</li>
+                    <li>Express</li>
                 </ul>
             </section>   
         </article>
